--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
+<title>Qaim Ali Zaidi's Website</title>
 </head>
 <body>
-<h1>Hello</h1>
+<h1>Qaim Ali Zaidi's Website</h1>
 </body
 </html>
