--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <head>
 <title>Qaim Ali Zaidi's Website</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
+<style>
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
+.header {
+	padding: 80px;
+	text-align: center;
+	background: #1abc9c;
+	color: white;
+}
+.header h1 (
+	font-size:40px;
+}
+</style>
 </head>
 <body>
-<h1>Qaim Ali Zaidi's Website</h1>
+<div class="header">
+	<h1>Qaim Ali Zaidi's Website</h1>
+	<p>Hello my name is Qaim Ali Zaidi. I think. I am not exactly sure but i might be wrong.</p>
+</div>
 </body
 </html>
