--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <title>Qaim Ali Zaidi's Website</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <style>
+* {
+	box-sizing: border-box;
+}	
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -13,15 +17,64 @@ body {
 	background: #1abc9c;
 	color: white;
 }
-.header h1 (
+.header h1 {
 	font-size:40px;
+}
+.navbar {
+	overflow: hidden;
+	background-color: #333;
+}
+.navbar a {
+	float: left;
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 20px;
+	text-decoration: none;
+}
+.navbar a.right {
+	float: right;
+}
+.navbar a:hover {
+	background-color: #ddd;
+	color: black;
+}
+.row {
+	display: flex;
+	flex-wrap: wrap;
+}
+.side {
+	flex: 30%;
+	background-color: #f1f1f1;
+	padding: 20px
+}
+.main {
+	flex: 70%;
+	background-color: white;
+	padding: 20px;
+}
+@media screen and (max-width: 700px) {
+	.row {
+		flex-direction: column;
+	}
 }
 </style>
 </head>
 <body>
 <div class="header">
 	<h1>Qaim Ali Zaidi's Website</h1>
-	<p>Hello my name is Qaim Ali Zaidi. I think. I am not exactly sure but i might be wrong.</p>
+	<p>blah blah blah</p>
 </div>
-</body
+
+<div class="navbar">
+	<a href="#">Link</a>
+	<a href="#">Link</a>
+	<a href="#">Link</a>
+	<a href="#" class="right">Link</a>
+</div>
+<div class="row">
+	<div class="side">...</div>
+	<div class="main">...</div>
+</div>
+</body>
 </html>
