--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
 	<a href="#" class="right">Link</a>
 </div>
 <div class="row">
-	<div class="side">...</div>
+	<div class="side">blah blah blah no idea what to put here so i put this blah blah blah blah blah</div>
 	<div class="main">...</div>
 </div>
 </body>
