--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 .header {
 	padding: 80px;
 	text-align: center;
-	background: #1abc9c;
+	background: #8B0000;
 	color: white;
 }
 .header h1 {
@@ -63,7 +63,7 @@ body {
 <body>
 <div class="header">
 	<h1>Qaim Ali Zaidi's Website</h1>
-	<p>blah blah blah</p>
+	<p>Hello, my name is Qaim Ali and I am a 15 years old high schooler currently in grade 11. I have experience in graphic designing to 2D and 3D animating to coding and even video editing. </p>
 </div>
 
 <div class="navbar">
@@ -73,7 +73,7 @@ body {
 	<a href="#" class="right">Link</a>
 </div>
 <div class="row">
-	<div class="side">blah blah blah no idea what to put here so i put this blah blah blah blah blah</div>
+	<div class="side">..</div>
 	<div class="main">...</div>
 </div>
 </body>
