--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ body {
 <body>
 <div class="header">
 	<h1>Qaim Ali Zaidi's Website</h1>
-	<p>Hello, my name is Qaim Ali and I am a 15 years old high schooler currently in grade 11. I have experience in graphic designing to 2D and 3D animating to coding and even video editing. </p>
+	<p>Hello, my name is Qaim Ali and I am a 15 year old high schooler currently in grade 11. I have experience in graphic designing to 2D and 3D animating to coding and even video editing. </p>
 </div>
 
 <div class="navbar">
-	<a href="#">Link</a>
+	<a href="#">Affinity Photo</a>
 	<a href="#">Link</a>
 	<a href="#">Link</a>
 	<a href="#" class="right">Link</a>
