--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@ body {
 		flex-direction: column;
 	}
 }
+@media screen and (max-width: 400px) {
+	.navbar a {
+		float: none;
+		width: 100%;
+	}
+}
+.footer {
+	padding: 15px;
+	text-align: center;
+	background: #ddd;
+}
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 75%;
+}
+}
 </style>
 </head>
 <body>
@@ -65,7 +83,6 @@ body {
 	<h1>Qaim Ali Zaidi's Website</h1>
 	<p>Hello, my name is Qaim Ali and I am a 15 year old high schooler currently in grade 11. I have experience in graphic designing to 2D and 3D animating to coding and even video editing. </p>
 </div>
-
 <div class="navbar">
 	<a href="#">Affinity Photo</a>
 	<a href="#">Link</a>
@@ -73,8 +90,16 @@ body {
 	<a href="#" class="right">Link</a>
 </div>
 <div class="row">
-	<div class="side">..</div>
-	<div class="main">...</div>
+	<div class="side">
+		<img src="lionhead.png" alt="lionhead" class="center">
+		<h4 class="center">Lion Head - Created using Affinity Photo</h4>
+	</div>
+	<div class="main">
+	<h1>blsah blah blkah</h1>
+	</div>
+</div>
+<div class="footer">
+	<h2>Footer</h2>
 </div>
 </body>
 </html>
