--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body {
 	<p>Hello, my name is Qaim Ali and I am a 15 year old high schooler currently in grade 11. I have experience in graphic designing to 2D and 3D animating to coding and even video editing. </p>
 </div>
 <div class="navbar">
-	<a href="#">Affinity Photo</a>
+	<a href="https://affinity.serif.com/en-gb/photo/">Affinity Photo</a>
 	<a href="#">Link</a>
 	<a href="#">Link</a>
 	<a href="#" class="right">Link</a>
