--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {
 	</div>
 </div>
 <div class="footer">
-	<h2>Footer</h2>
+	<h4>Contact info: syedqaimali12@gmail.com</h4>
 </div>
 </body>
 </html>
