--- a/index.html
+++ b/index.html
@@ -85,17 +85,18 @@ body {
 </div>
 <div class="navbar">
 	<a href="https://affinity.serif.com/en-gb/photo/">Affinity Photo</a>
-	<a href="#">Link</a>
-	<a href="#">Link</a>
-	<a href="#" class="right">Link</a>
 </div>
 <div class="row">
 	<div class="side">
-		<img src="lionhead.png" alt="lionhead" class="center">
+		<img src="images/lionhead.png" alt="lionhead" class="center">
 		<h4 class="center">Lion Head - Created using Affinity Photo</h4>
+		<img src="images/rollsroyce.png" alt="rollsroyce" class="center">
+		<h4 class="center">Rolls Royce Art - Created using Affinity Photo</h4>
+		<img src="images/lamborghini.png" alt="lamborghini" class="center">
+		<h4 class="center">Lamborghini Art - Created using Affinity Photo</h4>
 	</div>
 	<div class="main">
-	<h1>blsah blah blkah</h1>
+	<h1>.......</h1>
 	</div>
 </div>
 <div class="footer">
