--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 }
 .navbar {
 	overflow: hidden;
-	background-color: #333;
+	background-color: #262626;
 }
 .navbar a {
 	float: left;
@@ -44,13 +44,13 @@ body {
 	flex-wrap: wrap;
 }
 .side {
-	flex: 30%;
-	background-color: #f1f1f1;
+	flex: 20%;
+	background-color: #333333;
 	padding: 20px
 }
 .main {
-	flex: 70%;
-	background-color: white;
+	flex: 80%;
+	background-color: #0d0d0d;
 	padding: 20px;
 }
 @media screen and (max-width: 700px) {
@@ -73,7 +73,13 @@ body {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 75%;
+	width: 50%;
+}
+.text {
+	color: white;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
 }
 }
 </style>
@@ -88,15 +94,15 @@ body {
 </div>
 <div class="row">
 	<div class="side">
-		<img src="images/lionhead.png" alt="lionhead" class="center">
-		<h4 class="center">Lion Head - Created using Affinity Photo</h4>
-		<img src="images/rollsroyce.png" alt="rollsroyce" class="center">
-		<h4 class="center">Rolls Royce Art - Created using Affinity Photo</h4>
-		<img src="images/lamborghini.png" alt="lamborghini" class="center">
-		<h4 class="center">Lamborghini Art - Created using Affinity Photo</h4>
+	<h2 style="color: white;">Latest Creations:</h2>
 	</div>
 	<div class="main">
-	<h1>.......</h1>
+		<img src="images/lionhead.png" alt="lionhead" class="center">
+		<h4 class="text">Lion Head - Created using Affinity Photo</h4>
+		<img src="images/rollsroyce.png" alt="rollsroyce" class="center">
+		<h4 class="text">Rolls Royce Art - Created using Affinity Photo</h4>
+		<img src="images/lamborghini.png" alt="lamborghini" class="center">
+		<h4 class="text">Lamborghini Art - Created using Affinity Photo</h4>
 	</div>
 </div>
 <div class="footer">
