--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 }	
 body {
 	font-family: Arial, Helvetica, sans-serif;
+	margin: 0;
 }
 .header {
 	padding: 80px;
@@ -67,7 +68,7 @@ body {
 .footer {
 	padding: 15px;
 	text-align: center;
-	background: #ddd;
+	background: black;
 }
 .center {
 	display: block;
@@ -106,7 +107,7 @@ body {
 	</div>
 </div>
 <div class="footer">
-	<h4>Contact info: syedqaimali12@gmail.com</h4>
+	<h4 class="text">Contact info: syedqaimali12@gmail.com</h4>
 </div>
 </body>
 </html>
