--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ body {
 	flex: 20%;
 	background-color: #333333;
 	padding: 20px;
-	max-height: 900px;
 }
 .main {
 	flex: 80%;
@@ -63,7 +62,7 @@ body {
 .img {
 	margin-left: auto;
 	margin-right: auto;
-	width: 40%;
+	width: 25%;
 	padding: 20px;
 }
 .smallimg {
@@ -107,7 +106,7 @@ body {
 <body>
 <div class="header">
 	<h1>Qaim Ali Zaidi's Website</h1>
-	<p>Hello, my name is Qaim Ali and I am a 15 year old high schooler currently in grade 11. I have experience in graphic designing to 2D and 3D animating to coding and even video editing. </p>
+	<p>Hello, my name is Qaim Ali and I am a 15 year old high schooler currently in grade 11. I have experience in graphic designing to 2D and 3D animating to coding and even video editing. Below you can see some of my pictures which I have designed using Affinity Photo. </p>
 </div>
 <div class="navbar">
 	<a href="https://affinity.serif.com/en-gb/photo/">Affinity Photo</a>
@@ -119,22 +118,6 @@ body {
 			<img src="images/basket.jpg" class="smallimg">
 			<img src="images/basketball.png" class="smallimg">
 			<img src="images/castle.png" class="smallimg">
-			<img src="images/cloud.jpg" class="smallimg">
-			<img src="images/dragon.jpg" class="smallimg">
-			<img src="images/dragon2.jpg" class="smallimg">
-			<img src="images/dragon3.jpg" class="smallimg">
-			<img src="images/cloud.jpg" class="smallimg">
-			<img src="images/face.jpg" class="smallimg">
-			<img src="images/face2.jpg" class="smallimg">
-			<img src="images/forest.png" class="smallimg">
-			<img src="images/heaven.jpg" class="smallimg">
-			<img src="images/hogwarts.png" class="smallimg">
-			<img src="images/lebron.jpg" class="smallimg">
-			<img src="images/man.jpg" class="smallimg">
-			<img src="images/messi.png" class="smallimg">
-			<img src="images/mountain.png" class="smallimg">
-			<img src="images/ronaldo.jpg" class="smallimg">
-			<img src="images/spiderman.jpg" class="smallimg">
 			<img src="images/tree.jpg" class="smallimg">
 		</div>
 	</div>
@@ -144,11 +127,28 @@ body {
 				<img src="images/lamborghini.png" class="img">
 				<img src="images/lionhead.png" class="img">
 				<img src="images/cloud.jpg" class="img">
+				<img src="images/cloud.jpg" class="img">
+				<img src="images/dragon.jpg" class="img">
+				<img src="images/dragon2.jpg" class="img">
+				<img src="images/dragon3.jpg" class="img">
+				<img src="images/cloud.jpg" class="img">
+				<img src="images/face.jpg" class="img">
+				<img src="images/face2.jpg" class="img">
+				<img src="images/forest.png" class="img">
+				<img src="images/heaven.jpg" class="img">
+				<img src="images/hogwarts.png" class="img">
+				<img src="images/lebron.jpg" class="img">
+				<img src="images/man.jpg" class="img">
+				<img src="images/messi.png" class="img">
+				<img src="images/mountain.png" class="img">
+				<img src="images/ronaldo.jpg" class="img">
+				<img src="images/spiderman.jpg" class="img">
 		</div>
 	</div>
 </div>
 <div class="footer">
 	<h4 class="text">Contact info: syedqaimali12@gmail.com</h4>
+	<h4 class="text">For free website creation: hussainabidi2009@gmail.com</h4>
 </div>
 </body>
 </html>
